# rag_book_reviews

./: README.md  pyproject.toml
db/: chroma.sqlite3
reports/: goodreads_report.txt  reddit_report.txt
src/rag_book_reviews/: chainlit_app.py  chat_interface.py  crew.py  crew_chat_test.py  main.py  populate_db.py  read_reports.py  vector_db.py
src/rag_book_reviews/config/: agents.yaml  tasks.yaml
src/rag_book_reviews/tools/: custom_tool.py
